[build-system]
# Uses scikit-build-core with CMake to orchestrate Rust/Cargo build
# CMake calls Cargo to build the sparse-ir-capi library
requires = ["scikit-build-core", "cmake>=3.25", "ninja"]
build-backend = "scikit_build_core.build"

[project]
name = "pylibsparseir"
version = "0.7.2"
description = "Python bindings for the sparse-ir-capi library"
readme = "README.md"
license = {file = "LICENSE"}
maintainers = [
    {name = "SpM-lab"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.4",
    "scipy",
]

[project.urls]
Homepage = "https://github.com/SpM-lab/sparse-ir-rs"
Documentation = "https://github.com/SpM-lab/sparse-ir-rs"
Repository = "https://github.com/SpM-lab/sparse-ir-rs"
Issues = "https://github.com/SpM-lab/sparse-ir-rs/issues"

[tool.scikit-build]
# CMake is used to orchestrate the Rust/Cargo build
# The CMakeLists.txt calls Cargo to build sparse-ir-capi
cmake.version = ">=3.25"
cmake.build-type = "Release"

# Source directory (relative to pyproject.toml)
cmake.source-dir = "."
build.verbose = true
wheel.expand-macos-universal-tags = true

# Install rules for the Python package

# SDIST configuration - include necessary files
sdist.include = [
    "pylibsparseir/",
    "tests/",
    "tutorials/",
    "README.md",
    "LICENSE",
    "CMakeLists.txt",
    "prepare_build.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_tests.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]