[build-system]
# TODO: Update build system to use Rust/Cargo instead of CMake
# For now, this still uses scikit-build-core but the Rust library should be built separately
requires = ["scikit-build-core", "cmake>=3.25", "ninja"]
build-backend = "scikit_build_core.build"

[project]
name = "pylibsparseir"
version = "0.7.2"
description = "Python bindings for the sparse-ir-capi library"
readme = "README.md"
license = {file = "LICENSE"}
maintainers = [
    {name = "SpM-lab"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.4",
    "scipy",
]

[project.urls]
Homepage = "https://github.com/SpM-lab/sparse-ir-rs"
Documentation = "https://github.com/SpM-lab/sparse-ir-rs"
Repository = "https://github.com/SpM-lab/sparse-ir-rs"
Issues = "https://github.com/SpM-lab/sparse-ir-rs/issues"

[tool.scikit-build]
# TODO: Replace CMake configuration with Rust/Cargo build
# The Rust library (sparse-ir-capi) should be built separately before Python packaging
cmake.version = ">=3.25"
cmake.build-type = "Release"

# CMake arguments (legacy - to be removed when build system is updated)
cmake.args = [
    "-DSPARSEIR_USE_EXTERN_FBLAS_PTR=ON",
    "-DBUILD_SHARED_LIBS=ON",
    "-DCMAKE_CXX_STANDARD=11",
    "-DCMAKE_CXX_STANDARD_REQUIRED=ON",
]

# Source directory (relative to pyproject.toml)
cmake.source-dir = "."
build.verbose = true
wheel.expand-macos-universal-tags = true

# Install rules for the Python package

# SDIST configuration - include necessary files
# Note: Rust library should be built separately before packaging
sdist.include = [
    "pylibsparseir/",
    "tests/",
    "tutorials/",
    "README.md",
    "LICENSE",
]



[tool.scikit-build.cmake.define]
# Legacy CMake configuration (to be removed when build system is updated)
BUILD_SHARED_LIBS = "ON"
CMAKE_CXX_STANDARD = "11"
CMAKE_CXX_STANDARD_REQUIRED = "ON"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_tests.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]