[package]
name = "sparse-ir-capi"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "C API for SparseIR Rust implementation"
license.workspace = true
exclude = [
    ".cargo_vcs_info.json",
    ".gitignore",
    "Cargo.lock",
    "Cargo.toml.orig",
]

[lib]
name = "sparse_ir_capi"
# Build both dynamic and static libraries, plus rlib for Rust tests
crate-type = ["cdylib", "staticlib", "rlib"]

# build.rs will automatically generate sparseir.h via cbindgen

[dependencies]
# Main SparseIR library (version from workspace.dependencies, overridden locally via [patch.crates-io])
sparse-ir.workspace = true

# Array library (for Shape trait)
mdarray.workspace = true

# Error code type
libc.workspace = true

# Complex numbers
num-complex.workspace = true

# Macro utilities for identifier concatenation
paste = "1.0"


[features]
default = []
capi = []

# cargo-c configuration for cinstall
[package.metadata.capi]
# Disable automatic header generation and use existing header file from assets/
[package.metadata.capi.header]
generation = false
# Header file will be copied from assets/sparse_ir_capi.h

# pkg-config configuration
[package.metadata.capi.pkg_config]
name = "sparse-ir-capi"
description = "C API for SparseIR library"
version = "0.7.2"

[profile.release]
# Keep symbols for C API (overrides workspace default)
strip = false

[dev-dependencies]
rstest = "0.22"
# System BLAS for integration tests (uses blas-sys which links to system BLAS)
blas-sys.workspace = true
