[package]
name = "sparseir-capi"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "C API for SparseIR Rust implementation"
license.workspace = true

[lib]
name = "sparseir_capi"
# Build both dynamic and static libraries, plus rlib for Rust tests
crate-type = ["cdylib", "staticlib", "rlib"]

# build.rs will automatically generate sparseir.h via cbindgen

[dependencies]
# Main SparseIR library
sparseir-rust = { path = "../sparseir-rust" }

# Array library (for Shape trait)
mdarray.workspace = true

# Error code type
libc.workspace = true

# Complex numbers
num-complex.workspace = true

# Macro utilities for identifier concatenation
paste = "1.0"


[features]
default = []

[profile.release]
# Keep symbols for C API (overrides workspace default)
strip = false

[dev-dependencies]
rstest = "0.22"
# System BLAS for integration tests (uses blas-sys which links to system BLAS)
blas-sys.workspace = true
